--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -174,12 +174,12 @@ main {
 .button:hover {
   background: #3876ac;
 }
-
+ 
 .smFont {
   font-size: 16px;
 }
 
-.bground {
+.bground, .bground-validation {
   display: none;
   position: fixed;
   z-index: 1;
@@ -191,7 +191,9 @@ main {
   background-color: rgba(26, 39, 156, 0.4);
 }
 
-.content {
+
+
+.content, .content-validation {
   margin: 5% auto;
   width: 100%;
   max-width: 500px;
@@ -205,10 +207,23 @@ main {
   padding-top: 10px;
 }
 
+.content-validation {
+  height: 785px;
+}
+
 .modal-body {
   padding: 15px 8%;
   margin: 15px auto;
 }
+
+.validation {
+  padding: 15px 8%;
+  margin: 15px auto;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 
 label {
   font-family: var(--font-default);
@@ -341,7 +356,7 @@ input {
   top: 19%;
 }
 
-.close {
+.close, .close-validation {
   position: absolute;
   right: 15px;
   top: 15px;
@@ -352,8 +367,8 @@ input {
   transform: scale(0.7);
 }
 
-.close:before,
-.close:after {
+.close:before, .close-validation:before, 
+.close:after, .close-validation:after {
   position: absolute;
   left: 15px;
   content: " ";
@@ -362,16 +377,16 @@ input {
   background-color: #fff;
 }
 
-.close:before {
+.close:before, .close-validation:before {
   transform: rotate(45deg);
 }
 
-.close:after {
+.close:after, .close-validation:after {
   transform: rotate(-45deg);
 }
 
 .btn-submit,
-.btn-signup {
+.btn-signup, .btn-close {
   background: #fe142f;
   display: block;
   margin: 0 auto;
